<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="media_string">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="settings_menu">Настройки</string>
    <string name="settings_night">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_help">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="share_link" tools:ignore="Typos">https://practicum.yandex.ru/referrals/?ref_code=gAAAAABklt2caK30zWyUcglmI80Ij4uA2auaRaqBDgqjCPiP63DRvSPOrtW_jmZGUzxAzxgmHy1ySnm7s7cTiow7bw1cX1_L5g%3D%3D</string>
    <string name="my_email">foodcats@yandex.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_header">Поиск</string>
    <string name="smells_like_teen_spirit_name">Smells Like Teen Spirit</string>
    <string name="smells_like_teen_spirit_artist">Nirvana</string>
    <string name="smells_like_teen_spirit_length">5:01</string>
    <string name="smells_like_teen_spirit_image">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="billie_jean_name">Billie Jean</string>
    <string name="billie_jean_artist">Michael Jackson</string>
    <string name="billie_jean_length">4:35</string>
    <string name="billie_jean_image">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="stayin_alive_name">Stayin\' Alive</string>
    <string name="stayin_alive_artist">Bee Gees</string>
    <string name="stayin_alive_length">4:10</string>
    <string name="stayin_alive_image">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="whole_lotta_love_name">Whole Lotta Love</string>
    <string name="whole_lotta_love_artist">Led Zeppelin</string>
    <string name="whole_lotta_love_length">5:33</string>
    <string name="whole_lotta_love_image">https://is2–ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f–2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="sweet_child_o_mine_name">Sweet Child O\'Mine</string>
    <string name="sweet_child_o_mine_artist">Guns N\' Roses</string>
    <string name="sweet_child_o_mine_length">5:03</string>
    <string name="sweet_child_o_mine_image">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
</resources>