<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standard_padding"
        android:paddingStart="20dp"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_menu"
            android:textSize="@dimen/text"
            android:textAppearance="@font/ys_display_medium"
            android:layout_marginStart="28dp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="@dimen/standard_padding"
        android:paddingTop="61dp"
        android:paddingBottom="@dimen/settings_bottom_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@font/ys_display_medium"
            android:textSize="@dimen/text_small"
            android:text="@string/settings_night"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:thumbTint="@color/YP_Text_Gray"
            android:trackTint="@color/YP_Light_Gray"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>
    </FrameLayout>
        <Button
            style="@style/SettingsMenu"
            app:icon="@drawable/share_vector"
            android:text="@string/settings_share"/>
        <Button
            style="@style/SettingsMenu"
            app:icon="@drawable/support_vector"
            android:text="@string/settings_help"/>
        <Button
            style="@style/SettingsMenu"
            app:icon="@drawable/arrow_fwrd_vector"
            android:text="@string/settings_agreement"/>
</LinearLayout>